--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/x-data-grid": "^8.5.3",
+    "@zxing/library": "^0.21.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.9.1",
+    "quagga": "^0.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
