--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.58.1",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.0.1",
+    "tesseract.js": "^5.1.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.6"
   },
