--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@fontsource/roboto": "^5.2.6",
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.1.2",
-    "@mui/material": "^7.1.2",
+    "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.5.3",
     "@zxing/library": "^0.21.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.9.1",
+    "lodash.debounce": "^4.0.8",
     "quagga": "^0.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
